@@ -120,6 +120,15 @@ allprojects {
         jvmArgs '--illegal-access=deny'
       }
 
+      // Enable the vector incubator module on supported Java versions:
+      if (rootProject.vectorIncubatorJavaVersions.contains(rootProject.runtimeJavaVersion)) {
+        jvmArgs '--add-modules', 'jdk.incubator.vector'
+      }
+
+      if (rootProject.runtimeJavaVersion >= JavaVersion.VERSION_17) {
+        jvmArgs '--enable-native-access=ALL-UNNAMED'
+      }
+
       def loggingConfigFile = layout.projectDirectory.file("${resources}/logging.properties")
       def tempDir = layout.projectDirectory.dir(testsTmpDir.toString())
       jvmArgumentProviders.add(
